# Tic_tac_toe

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/controller/: GameController.cpp  GameController.h
src/model/: cell.cpp  cell.h  field.cpp  field.h  logic.cpp  logic.h  simpleAI.cpp  simpleAI.h  status.cpp  status.h
src/view/: gameField.cpp  gameField.h
